<resources>
    <string name="app_name" translatable="false">Go4Lunch</string>
    <string name="login">Register</string>
    <string name="search">Search</string>

    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_drawer_lunch">Your lunch</string>
    <string name="menu_drawer_setting">Setting</string>
    <string name="menu_drawer_logout">Logout</string>

    <!-- Used in pager -->
    <string name="menu_map">Map</string>
    <string name="menu_list">List</string>
    <string name="menu_workmates">Workmates</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>